grammar.js
    source_file: ($) =>
      seq(
        repeat($._end_of_line),
        choice(
          optional(seq($._block, repeat($.function_definition))),
          repeat1($.function_definition),
        ),
      ),

    _block: ($) =>
      repeat1(
        seq(
          choice(
            $._statement,
            $._expression,
            alias($._function_definition_with_end, $.function_definition),
          ),
          repeat1($._end_of_line),
        ),
      ),
    _functionless_block: ($) =>
      prec(1, repeat1(
        seq(
          choice($._statement, $._expression),
          repeat1($._end_of_line),
        ),
      )),
    block: ($) => $._block,

    identifier: ($) => choice($._external_identifier, $._keywords),

    _expression: ($) =>
      choice(
        $.binary_operator,
        $.boolean_operator,
        $.cell,
        $.comparison_operator,
        $.function_call,
        $.handle_operator,
        $.identifier,
        $.lambda,
        $.matrix,
        $.metaclass_operator,
        $.not_operator,
        $.number,
        $.parenthesis,
        $.postfix_operator,
        $.range,
        $.string,
        $.unary_operator,
        $.field_expression,
      ),

    _binary_expression: ($) =>
      prec(
        1,
        choice(
          $.binary_operator,
          $.boolean_operator,
          $.cell,
          $.comparison_operator,
          $.function_call,
          $.identifier,
          $.matrix,
          $.not_operator,
          $.number,
          $.parenthesis,
          $.postfix_operator,
          $.string,
          $.field_expression,
          $.unary_operator,
        ),
      ),

    binary_operator: ($) => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '.+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '.-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '.*', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, './', PREC.times],
        [prec.left, '\\', PREC.times],
        [prec.left, '.\\', PREC.times],
        [prec.right, '^', PREC.power],
        [prec.right, '.^', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
      ];

      return choice(
        // @ts-ignore
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field('left', $._binary_expression),
              // @ts-ignore
              operator,
              field('right', $._binary_expression),
            ),
          ),
        ),
      );
    },

    unary_operator: ($) =>
      prec(
        PREC.unary,
        seq(
          choice('+', '-'),
          field(
            'operand',
            choice(
              $.cell,
              $.field_expression,
              $.function_call,
              $.identifier,
              $.matrix,
              $.not_operator,
              $.number,
              $.parenthesis,
              $.postfix_operator,
              $.string,
              $.unary_operator,
            ),
          ),
        ),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field('object', choice($.identifier, $.function_call)),
          repeat1(
            seq(
              '.',
              field(
                'field',
                choice(
                  $.identifier,
                  alias($._extended_keywords, $.identifier),
                  alias($._function_call_with_keywords, $.function_call),
                  $.indirect_access
                ),
              ),
            ),
          ),
        ),
      ),

    postfix_operator: ($) =>
      prec(
        PREC.postfix,
        seq(
          field(
            'operand',
            choice(
              $.binary_operator,
              $.cell,
              $.function_call,
              $.identifier,
              $.matrix,
              $.number,
              $.parenthesis,
              $.postfix_operator,
              $.string,
              $.field_expression,
              $.unary_operator,
            ),
          ),
          choice(alias($._transpose, "'"), alias($._ctranspose, ".'")),
        ),
      ),

    string: ($) =>
      choice(
        seq(
          alias($._double_quote_string_start, '"'),
          repeat(
            choice($.string_content, $.escape_sequence, $.formatting_sequence),
          ),
          alias($._double_quote_string_end, '"'),
        ),
        seq(
          alias($._single_quote_string_start, '\''),
          repeat(
            choice($.string_content, $.escape_sequence, $.formatting_sequence),
          ),
          alias($._single_quote_string_end, '\''),
        ),
      ),

    row: ($) =>
      seq(
        optional(','),
        choice($._expression, $.ignored_argument),
        repeat(
          seq(alias($._entry_delimiter, ','), choice($._expression, $.ignored_argument)),
        ),
        optional(alias($._entry_delimiter, ',')),
      ),
    matrix: ($) =>
      seq(
        '[',
        repeat("\n"),
        optional(seq($.row, repeat(seq(choice(';', /[\r\n]/), optional($.row))))),
        ']',
      ),
    cell: ($) =>
      seq(
        '{',
        repeat("\n"),
        optional(seq($.row, repeat(seq(choice(';', /[\r\n]/), optional($.row))))),
        '}',
      ),

    ignored_argument: (_) => prec(PREC.not + 1, '~'),

    // A = B
    // A(1) = B
    // A{1} = B
    // A.b = B
    // [A, B, C] = D
    assignment: ($) =>
      seq(
        field(
          'left',
          choice(
            $.identifier,
            $.field_expression,
            $.ignored_argument,
            $.function_call,
            $.multioutput_variable,
          ),
        ),
        '=',
        field('right', $._expression),
      ),

    multioutput_variable: ($) =>
      seq(
        alias($._multioutput_variable_start, '['),
        repeat("\n"),
        optionalCommaSep(
          choice(
            $.identifier,
            $.field_expression,
            $.ignored_argument,
            $.function_call,
            $.ignored_argument,
          ),
        ),
        ']',
      ),

    spread_operator: (_) => ':',

    _index_arguments: ($) => commaSep1(field('argument', $._index_argument)),

    arguments: ($) =>
      choice(
        seq(
          $._index_arguments,
          optional(seq(',', commaSep1(seq($.identifier, '=', $._expression)))),
        ),
        commaSep1(seq($.identifier, '=', $._expression)),
      ),
    _args: ($) =>
      choice(
        seq('(', optional($.arguments), ')'),
        seq('{', optional($.arguments), '}'),
      ),
    function_call: ($) =>
      choice(
        prec.right(
          PREC.call,
          seq(
            field(
              'name',
              choice(
                alias($.end_keyword, $.identifier),
                $.identifier,
                $.function_call,
                $.indirect_access,
              ),
            ),
            optional(seq('@', alias($.property_name, $.superclass))),
            $._args,
          ),
        ),
        prec.right(
          PREC.call,
          seq(
            field(
              'name',
              choice(
                $.identifier,
                $.function_call,
                $.indirect_access,
              ),
            ),
            seq('@', alias($.property_name, $.superclass)),
            optional($._args),
          ),
        ),),
    _function_call_with_keywords: ($) =>
      choice(
        prec.right(
          PREC.call,
          seq(
            field(
              'name',
              choice(
                alias($.end_keyword, $.identifier),
                alias($._extended_keywords, $.identifier),
                $.identifier,
                $.function_call,
                $.indirect_access,
              ),
            ),
            optional(seq('@', alias($.property_name, $.superclass))),
            $._args,
          ),
        ),
        prec.right(
          PREC.call,
          seq(
            field(
              'name',
              choice(
                $.identifier,
                $.function_call,
                $.indirect_access,
              ),
            ),
            seq('@', alias($.property_name, $.superclass)),
            optional($._args),
          ),
        ),),

    command: ($) => prec.right(seq($.command_name, repeat($.command_argument))),

    // Unary operators cannot bind stronger in this case_clause, lest the world falls apart.
    _range_element: ($) =>
      choice(
        $.field_expression,
        $.function_call,
        $.identifier,
        $.matrix,
        $.not_operator,
        $.number,
        $.parenthesis,
        $.postfix_operator,
        $.string,
        prec.dynamic(-1, $.unary_operator),
        prec.dynamic(1, $.binary_operator),
      ),
    range: ($) =>
      prec.right(
        PREC.postfix,
        seq(
          $._range_element,
          ':',
          $._range_element,
          optional(seq(':', $._range_element)),
        ),
      ),

    _lambda_arguments: ($) =>
      commaSep1(choice($.ignored_argument, $.identifier)),
    function_output: ($) =>
      seq(choice($.identifier, $.multioutput_variable), '='),
    function_arguments: ($) =>
      seq('(', field('arguments', optional($._lambda_arguments)), ')'),
    function_definition: ($) =>
      prec.dynamic(0, seq(
        'function',
        optional($.function_output),
        optional(choice('get.', 'set.')),
        field('name', choice($.identifier, $.property_name, alias($.end_keyword, $.identifier))),
        optional($.function_arguments),
        $._end_of_line,
        repeat(seq(repeat(choice($.comment, $._end_of_line)), $.arguments_statement)),
        repeat(choice($.comment, $._end_of_line)),
        optional(alias($._functionless_block, $.block)),
        optional(seq(choice('end', 'endfunction'), optional(';'))),
      )),
    _function_definition_with_end: ($) =>
      prec.dynamic(1, seq(
        'function',
        optional($.function_output),
        optional(choice('get.', 'set.')),
        field('name', choice($.identifier, $.property_name, alias($.end_keyword, $.identifier))),
        optional($.function_arguments),
        optional(
          seq(
            $._end_of_line,
            repeat(seq(repeat(choice($.comment, $._end_of_line)), $.arguments_statement)),
            repeat(choice($.comment, $._end_of_line)),
            optional($.block),
          )
        ),
        choice('end', 'endfunction'),
        optional(';'),
      )),

    attributes: ($) =>
      seq('(', $.attribute, repeat(seq(',', $.attribute)), ')'),
    superclasses: ($) =>
      seq('<', $.property_name, repeat(seq('&', $.property_name))),
    dimensions: ($) =>
      seq('(', commaSep1(choice($.number, $.spread_operator)), ')'),
    validation_functions: ($) =>
      seq('{', choice($.function_call, $.identifier, $.field_expression), repeat(seq(optional(","), choice($.function_call, $.identifier, $.field_expression))), '}'),
    default_value: ($) => seq('=', $._expression),
    property_name: ($) =>
      prec.right(
        prec.dynamic(
          -1,
          seq(
            $.identifier,
            repeat(seq('.', $.identifier)),
            optional(seq('.', '*')),
          ),
        ),
      ),
    property: ($) =>
      choice(
        seq(
          field(
            'name',
            choice($.identifier, $.property_name, $.ignored_argument),
          ),
          optional($.dimensions),
          optional(choice($.identifier, $.property_name)),
          optional($.validation_functions),
          optional($.default_value),
          repeat1($._end_of_line),
        ),
        seq(
          field(
            'name',
            choice($.identifier, $.property_name, $.ignored_argument),
          ),
          '@',
          $.identifier,
          alias(optional(choice('vector', 'matrix', 'scalar')), $.identifier),
          optional($.default_value),
          repeat1($._end_of_line),
        )
      ),
    properties: ($) =>
      prec.right(
        seq(
          'properties',
          optional($.attributes),
          repeat1($._end_of_line),
          repeat($.property),
          'end',
          repeat($._end_of_line),
        ),
      ),
    function_signature: ($) =>
      seq(
        optional($.function_output),
        optional(choice('get.', 'set.')),
        field('name', alias(choice($._external_identifier, 'get', 'set', 'arguments'), $.identifier)),
        optional($.function_arguments),
      ),
    methods: ($) =>
      prec.right(
        seq(
          'methods',
          optional($.attributes),
          repeat1($._end_of_line),
          repeat(
            seq(
              choice(
                alias(seq($.function_output, field('name', alias('end', $.identifier)), $.function_arguments), $.function_signature),
                $.function_signature,
                alias($._function_definition_with_end, $.function_definition)),
              repeat($._end_of_line)),
          ),
          'end',
          repeat($._end_of_line),
        ),
      ),
    events: ($) =>
      prec.right(
        seq(
          'events',
          optional($.attributes),
          $._end_of_line,
          repeat(choice(seq($.identifier, $._end_of_line), $._end_of_line)),
          'end',
          repeat($._end_of_line),
        ),
      ),
    enum: ($) =>
      seq($.identifier, optional(seq('(', commaSep1($._expression), ')'))),
    enumeration: ($) =>
      prec.right(
        seq(
          'enumeration',
          optional($.attributes),
          $._end_of_line,
          repeat(choice(seq($.enum, $._end_of_line), $._end_of_line)),
          'end',
          repeat($._end_of_line),
        ),
      ),
    class_definition: ($) =>
      seq(
        'classdef',
        optional($.attributes),
        field('name', $.identifier),
        optional($.superclasses),
        $._end_of_line,
        repeat(choice($.properties, $.methods, $.events, $.enumeration, ';')),
        'end',
      ),

    number: ($) => choice(
      /(\d+|\d+\.\d*|\.\d+)([eEdD][+-]?\d+)?[ij]?/,
      /0[xX][\dA-Fa-f]+([suSU](8|16|32|64))?/,
      /0[bB][01]+([suSU](8|16|32|64))?/
    ),

    _keywords: ($) => choice("get", "set", "properties", "arguments", "enumeration", "events", "methods"),

    _extended_keywords: ($) => prec(100, choice(
      "break", "case", "catch", "classdef", "continue", "else", "elseif", "end", "for", "function",
      "global", "if", "otherwise", "parfor", "persistent", "return", "spmd", "switch", "try",
      "while",
    )),

    _end_of_line: ($) => choice(';', '\n', '\r', ','),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {SeqRule}
 *
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule to match zero or more of the rules optionally separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {SeqRule}
 *
 */
function optionalCommaSep(rule) {
  return optional(seq(rule, repeat(seq(optional(','), rule)), optional(',')));
}
