test/corpus/cell.txt
================================================================================
Cell: Simple
================================================================================

{1 2 3 4}
{1,2,3,4}

--------------------------------------------------------------------------------

(source_file
  (cell
    (row
      (number)
      (number)
      (number)
      (number)))
  (cell
    (row
      (number)
      (number)
      (number)
      (number))))

================================================================================
Cell: Multidimensional
================================================================================

{1 2; 3 4}
{{1 2} {3 4}; {5 6} {7}}

--------------------------------------------------------------------------------

(source_file
  (cell
    (row
      (number)
      (number))
    (row
      (number)
      (number)))
  (cell
    (row
      (cell
        (row
          (number)
          (number)))
      (cell
        (row
          (number)
          (number))))
    (row
      (cell
        (row
          (number)
          (number)))
      (cell
        (row
          (number))))))

================================================================================
Cell: Sequence of strings
================================================================================

{'a' b' 'c' 'd'}

--------------------------------------------------------------------------------

(source_file
  (cell
    (row
      (string
        (string_content))
      (postfix_operator
        (identifier))
      (string
        (string_content))
      (string
        (string_content)))))
