test/corpus/class.txt
================================================================================
Class Definition: Minimal
================================================================================

classdef ClassName
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (keyword)))

================================================================================
Class Definition: With Attributes
================================================================================

classdef (Attr1 = 1, Attr2 = '2') a_class
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (attributes
      (identifier)
      (number)
      (identifier)
      (string))
    (identifier)
    (keyword)))

================================================================================
Class Definition: With Super Classes
================================================================================

classdef a_class < Class1 & Class2
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (superclasses
      (identifier)
      (identifier))
    (keyword)))

================================================================================
Class Definition: Properties
================================================================================

classdef DifferentValidation
   properties
      MyPublicData (1,:) double {mustBePositive} = [1 1 1]
      RestrictedByClass uint32
      RestrictedByFunction {mustBeInteger,mustBePositive} = 0
   end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (properties
      (keyword)
      (property
        (property_name
          (identifier))
        (dimensions
          (number)
          (spread_operator))
        (class)
        (validation_functions
          (identifier))
        (default_value
          (matrix_definition
            (row
              (number)
              (number)
              (number)))))
      (property
        (property_name
          (identifier))
        (class))
      (property
        (property_name
          (identifier))
        (validation_functions
          (identifier)
          (identifier))
        (default_value
          (number)))
      (keyword))
    (keyword)))

================================================================================
Class Definition: Methods
================================================================================

classdef Class
    methods (Access = public)
        function out = a(in)
            1
        end

        function out = b(~)
            2
        end
    end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (methods
      (keyword)
      (attributes
        (identifier)
        (identifier))
      (function_definition
        (keyword)
        (function_output
          (identifier))
        (identifier)
        (function_arguments
          (identifier))
        (block
          (number))
        (end_function
          (keyword)))
      (function_definition
        (keyword)
        (function_output
          (identifier))
        (identifier)
        (function_arguments
          (ignored_argument))
        (block
          (number))
        (end_function
          (keyword)))
      (keyword))
    (keyword)))

================================================================================
Class Definition: Arguments
================================================================================

classdef Class
    methods (Access = public)
        function out = a(in)
            arguments (Input)
                R     (1,1)   Rectangle
                x.a   (1,1)   {mustBeNonnegative}
            end
            1
        end
    end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (methods
      (keyword)
      (attributes
        (identifier)
        (identifier))
      (function_definition
        (keyword)
        (function_output
          (identifier))
        (identifier)
        (function_arguments
          (identifier))
        (arguments
          (keyword)
          (attributes
            (identifier))
          (property
            (property_name
              (identifier))
            (dimensions
              (number)
              (number))
            (class))
          (property
            (property_name
              (identifier)
              (identifier))
            (dimensions
              (number)
              (number))
            (validation_functions
              (identifier)))
          (keyword))
        (block
          (number))
        (end_function
          (keyword)))
      (keyword))
    (keyword)))

================================================================================
Class Definition: Simple Enumerations
================================================================================

classdef WeekDays
   enumeration
      Monday, Tuesday, Wednesday, Thursday, Friday
   end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (enumeration
      (keyword)
      (enum
        (identifier))
      (enum
        (identifier))
      (enum
        (identifier))
      (enum
        (identifier))
      (enum
        (identifier))
      (keyword))
    (keyword)))

================================================================================
Class Definition: Enumerations With Values
================================================================================

classdef Bool < logical
   enumeration
      No  (0)
      Yes (1)
   end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (superclasses
      (identifier))
    (enumeration
      (keyword)
      (enum
        (identifier)
        (default_value
          (number)))
      (enum
        (identifier)
        (default_value
          (number)))
      (keyword))
    (keyword)))

================================================================================
Class Definition: Enumerations With Multiple Values
================================================================================

classdef SyntaxColors
   enumeration
      Error   (1, 0, 0)
      Comment (0, 1, 0)
      Keyword (0, 0, 1)
      String  (1, 0, 1)
   end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (enumeration
      (keyword)
      (enum
        (identifier)
        (default_value
          (number))
        (default_value
          (number))
        (default_value
          (number)))
      (enum
        (identifier)
        (default_value
          (number))
        (default_value
          (number))
        (default_value
          (number)))
      (enum
        (identifier)
        (default_value
          (number))
        (default_value
          (number))
        (default_value
          (number)))
      (enum
        (identifier)
        (default_value
          (number))
        (default_value
          (number))
        (default_value
          (number)))
      (keyword))
    (keyword)))

================================================================================
Class Definition: Events
================================================================================

classdef ToggleButton < handle
   events
      ToggledState
      Quitting
   end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (superclasses
      (identifier))
    (events
      (keyword)
      (identifier)
      (identifier)
      (keyword))
    (keyword)))

================================================================================
Class Definition: External Methods
================================================================================

classdef Class
    methods
        output = func(a)
        func2
    end
end

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (keyword)
    (identifier)
    (methods
      (keyword)
      (function_signature
        (function_output
          (identifier))
        (identifier)
        (function_arguments
          (identifier)))
      (function_signature
        (identifier))
      (keyword))
    (keyword)))
